Fix broken geometry on firefox

--- a/resources/assets/less/bem/beatmapset-panel.less
+++ b/resources/assets/less/bem/beatmapset-panel.less
@@ -98,7 +98,6 @@
     .own-layer();
     .default-box-shadow();
     .default-border-radius();
-    display: inline-block;
 
     width: 100%;
     background: #fff;
